tests/NormalTests/paczka1/small_fuzzy/63125618.err
Error in line 7: 0sp0c S476 61,3
Error in line 3: SIoN2mt A60 78,3
Error in line 11: A760 S476 91,2
